--- a/term06/BASE/02-OOP/sem02.ipynb
+++ b/term06/BASE/02-OOP/sem02.ipynb
@@ -10,12 +10,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "06cce606-d5f0-474e-9f9f-7c8c1a34b6e0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Вася идет на дисциплину: Программирование\n",
+      "Вася спит\n",
+      "z\n",
+      "zzzzzz\n",
+      "z\n",
+      "Вася делает домашку по дисциплине: Программирование\n",
+      "скучно .......\n",
+      "скучно ....\n",
+      "Вася идет на дисциплину: Общий синтаксис\n",
+      "Вася спит\n",
+      "zzzzzzzzz\n",
+      "zzzzz\n",
+      "zz\n",
+      "Вася делает домашку по дисциплине: Общий синтаксис\n",
+      "скучно ........\n",
+      "скучно ..\n",
+      "Вася идет на дисциплину: Русская морфология\n",
+      "Вася спит\n",
+      "zzzzzzzzz\n",
+      "zzzzzzz\n",
+      "zzzzzz\n",
+      "Вася делает домашку по дисциплине: Русская морфология\n",
+      "скучно ...\n",
+      "скучно .....\n"
+     ]
+    }
+   ],
    "source": [
-    "# my code here"
+    "import time #time.sleep(3)\n",
+    "from random import randint\n",
+    "class Student:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "        self.course = 1\n",
+    "        self.recordbook = {}\n",
+    "    def sleep(self, n):\n",
+    "        print(f'{self.name} спит')\n",
+    "        for i in range(n):\n",
+    "            print('z' * randint(1, 10))\n",
+    "            time.sleep(1)\n",
+    "    def attendcourse(self, discipline):\n",
+    "        print(f'{self.name} идет на дисциплину: {discipline}')\n",
+    "        self.sleep(3) #селф абстрактный экземпляр\n",
+    "    def dohomework(self, discipline, n):\n",
+    "        print(f'{self.name} делает домашку по дисциплине: {discipline}')\n",
+    "        for _ in range(n):\n",
+    "            print('скучно', '.' * randint(1, 10))\n",
+    "\n",
+    "vasya = Student('Вася')\n",
+    "disciplines = ['Программирование', 'Общий синтаксис', 'Русская морфология']\n",
+    "for d in disciplines:\n",
+    "    vasya.attendcourse(d)\n",
+    "    vasya.dohomework(d, 2)\n"
    ]
   },
   {
@@ -28,12 +83,194 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "acc807b9-b533-40f7-bfc6-8a1e8ae3c3b1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Вася идет на дисциплину: Программирование\n",
+      "Вася спит\n",
+      "z\n",
+      "zzzzzzzzz\n",
+      "zzzzz\n",
+      "Вася делает домашку по дисциплине: Программирование\n",
+      "скучно ......\n",
+      "скучно .....\n",
+      "Вася идет на дисциплину: Общий синтаксис\n",
+      "Вася спит\n",
+      "zz\n",
+      "z\n",
+      "zzzzzzzzz\n",
+      "Вася делает домашку по дисциплине: Общий синтаксис\n",
+      "скучно ........\n",
+      "скучно ..\n",
+      "Вася идет на дисциплину: Русская морфология\n",
+      "Вася спит\n",
+      "zzzz\n",
+      "zzzz\n",
+      "zzzzzzz\n",
+      "Вася делает домашку по дисциплине: Русская морфология\n",
+      "скучно ....\n",
+      "скучно ......\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<bound method Student.viewrecordbook of <__main__.Student object at 0x000002A0DF70E250>>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# my code here"
+    "import time #time.sleep(3)\n",
+    "from random import randint\n",
+    "\n",
+    "class Recordbook:\n",
+    "    def __init__(self, studentname):\n",
+    "        self.owner = studentname\n",
+    "        self.marks = {}\n",
+    "    def __str__(self):\n",
+    "        return f\"Зачетка студента: {self.owner}\"\n",
+    "    def showmarks(self):\n",
+    "        l = max([len(x) for x in self.marks.keys()]) + 1\n",
+    "        for k, v in self.marks.items():\n",
+    "            print(f\"{k:<{l}}:{v:<3}\")\n",
+    "    def addmarks(self, discipline, marks):\n",
+    "        self.marks[discipline] = mark\n",
+    "class Student:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "        self.course = 1\n",
+    "        self.recordbook = Recordbook(name)\n",
+    "    def sleep(self, n):\n",
+    "        print(f'{self.name} спит')\n",
+    "        for i in range(n):\n",
+    "            print('z' * randint(1, 10))\n",
+    "            time.sleep(1)\n",
+    "    def attendcourse(self, discipline):\n",
+    "        print(f'{self.name} идет на дисциплину: {discipline}')\n",
+    "        self.sleep(3) #селф абстрактный экземпляр\n",
+    "    def dohomework(self, discipline, n):\n",
+    "        print(f'{self.name} делает домашку по дисциплине: {discipline}')\n",
+    "        for _ in range(n):\n",
+    "            print('скучно', '.' * randint(1, 10))\n",
+    "    def passexam(self, discipline):\n",
+    "        print(f\"{self.name} сдает экзамен по: {discipline}\")\n",
+    "        mark = randint(2, 5)\n",
+    "        self.recordbook.addmark(discipline, mark)\n",
+    "    def viewrecordbook(self):\n",
+    "        print(self.recordbook)\n",
+    "        self.recordbook.showmarks()\n",
+    "    \n",
+    "\n",
+    "vasya = Student('Вася')\n",
+    "disciplines = ['Программирование', 'Общий синтаксис', 'Русская морфология']\n",
+    "for d in disciplines:\n",
+    "    vasya.attendcourse(d)\n",
+    "    vasya.dohomework(d, 2)\n",
+    "for d in disciplines:\n",
+    "    vasya.passexam\n",
+    "vasya.viewrecordbook\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "62dca1c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Вася идет на дисциплину: Программирование\n",
+      "Вася спит\n",
+      "zzzzzzzzz\n",
+      "zzzzzzzzzz\n",
+      "zzz\n",
+      "Вася делает домашку по дисциплине: Программирование\n",
+      "скучно ..........\n",
+      "скучно .....\n",
+      "Вася идет на дисциплину: Общий синтаксис\n",
+      "Вася спит\n",
+      "zzzzzzzz\n",
+      "zzzz\n",
+      "zzzz\n",
+      "Вася делает домашку по дисциплине: Общий синтаксис\n",
+      "скучно .\n",
+      "скучно .......\n",
+      "Вася идет на дисциплину: Русская морфология\n",
+      "Вася спит\n",
+      "zzzzzz\n",
+      "z\n",
+      "zzz\n",
+      "Вася делает домашку по дисциплине: Русская морфология\n",
+      "скучно ........\n",
+      "скучно ...\n",
+      "Вася сдает экзамен по: Программирование\n",
+      "Вася сдает экзамен по: Общий синтаксис\n",
+      "Вася сдает экзамен по: Русская морфология\n",
+      "Зачетка студента: Вася\n",
+      "Программирование   :  2\n",
+      "Общий синтаксис    :  2\n",
+      "Русская морфология :  3\n"
+     ]
+    }
+   ],
+   "source": [
+    "class RecordBook:\n",
+    "    def __init__(self, studentname):\n",
+    "        self.owner = studentname \n",
+    "        self.marks = {}\n",
+    "    def __str__(self):\n",
+    "        return f\"Зачетка студента: {self.owner}\"\n",
+    "    def showmarks(self):\n",
+    "        l = max([len(x) for x in self.marks.keys()]) + 1\n",
+    "        for k, v in self.marks.items():\n",
+    "            print(f\"{k:<{l}}:{v:>3}\")\n",
+    "    def addmark(self, discipline, mark):\n",
+    "        self.marks[discipline] = mark\n",
+    "\n",
+    "class Student:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name \n",
+    "        self.course = 1 \n",
+    "        self.recordbook = RecordBook(name) \n",
+    "    def sleep(self, n):\n",
+    "        print(f'{self.name} спит')\n",
+    "        for _ in range(n):\n",
+    "            print('z' * randint(1, 10))\n",
+    "            time.sleep(1)\n",
+    "    def attendcourse(self, discipline):\n",
+    "        print(f'{self.name} идет на дисциплину: {discipline}')\n",
+    "        self.sleep(3)\n",
+    "    def dohomework(self, discipline, n):\n",
+    "        print(f'{self.name} делает домашку по дисциплине: {discipline}')\n",
+    "        for _ in range(n):\n",
+    "            print('скучно', '.' * randint(1, 10))\n",
+    "    def passexam(self, discipline):\n",
+    "        print(f\"{self.name} сдает экзамен по: {discipline}\")\n",
+    "        mark = randint(2, 5)\n",
+    "        self.recordbook.addmark(discipline, mark)\n",
+    "    def viewrecordbook(self):\n",
+    "        print(self.recordbook)\n",
+    "        self.recordbook.showmarks()\n",
+    "        \n",
+    "vasya = Student('Вася')\n",
+    "disciplines = ['Программирование', 'Общий синтаксис', 'Русская морфология']\n",
+    "for d in disciplines:\n",
+    "    vasya.attendcourse(d)\n",
+    "    vasya.dohomework(d, 2)\n",
+    "for d in disciplines:\n",
+    "    vasya.passexam(d)\n",
+    "vasya.viewrecordbook()"
    ]
   },
   {
@@ -48,12 +285,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "1b763e20-5436-4305-8e50-818da029d581",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Вася идет на дисциплину: Программирование\n",
+      "Вася спит\n",
+      "Вася делает домашку по дисциплине: Программирование\n",
+      "скучно .\n",
+      "скучно .........\n",
+      "скучно ......\n",
+      "Вася идет на дисциплину: Общий синтаксис\n",
+      "Вася спит\n",
+      "Вася делает домашку по дисциплине: Общий синтаксис\n",
+      "скучно ..........\n",
+      "скучно ..........\n",
+      "Вася идет на дисциплину: Русская морфология\n",
+      "Вася спит\n",
+      "Вася делает домашку по дисциплине: Русская морфология\n",
+      "скучно ...\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "class RecordBook:\n",
+    "    def __init__(self, studentname):\n",
+    "        self.owner = studentname \n",
+    "        self.marks = {}\n",
+    "    def __str__(self):\n",
+    "        return f\"Зачетка студента: {self.owner}\"\n",
+    "    def showmarks(self):\n",
+    "        l = max([len(x) for x in self.marks.keys()]) + 1\n",
+    "        for k, v in self.marks.items():\n",
+    "            print(f\"{k:<{l}}:{v:>3}\")\n",
+    "    def addmark(self, discipline, mark):\n",
+    "        self.marks[discipline] = mark\n",
+    "\n",
+    "class Student:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name \n",
+    "        self.course = 1 \n",
+    "        self.recordbook = RecordBook(name) \n",
+    "    def sleep(self, n):\n",
+    "        print(f'{self.name} спит')\n",
+    "        # for _ in range(n):\n",
+    "        #     print('z' * randint(1, 10))\n",
+    "        time.sleep(n)\n",
+    "    def attendcourse(self, discipline):\n",
+    "        print(f'{self.name} идет на дисциплину: {discipline.name}')\n",
+    "        self.sleep(discipline.duration)\n",
+    "    def dohomework(self, discipline):\n",
+    "        print(f'{self.name} делает домашку по дисциплине: {discipline.name}')\n",
+    "        if discipline.diff >= 2:\n",
+    "            n = 3\n",
+    "        elif 1 <= discipline.diff < 2:\n",
+    "            n = 2\n",
+    "        else:\n",
+    "            n = 1\n",
+    "        for _ in range(n):\n",
+    "            print('скучно', '.' * randint(1, 10))\n",
+    "    def passexam(self, discipline):\n",
+    "        print(f\"{self.name} сдает экзамен по: {discipline.name}\")\n",
+    "        mark = randint(2, 5)\n",
+    "        self.recordbook.addmark(discipline, mark)\n",
+    "    def viewrecordbook(self):\n",
+    "        print(self.recordbook)\n",
+    "        self.recordbook.showmarks()\n",
+    "\n",
+    "class Discipline:\n",
+    "    def __init__(self, name, duration_lec, diffic):\n",
+    "        self.name = name\n",
+    "        self.duration = duration_lec\n",
+    "        self.diff = diffic\n",
+    "\n",
+    "vasya = Student('Вася')\n",
+    "disciplines = [Discipline('Программирование', 1.5, 2), \n",
+    "               Discipline('Общий синтаксис', 2, 1), \n",
+    "               Discipline('Русская морфология', 3, 0.5)]\n",
+    "for d in disciplines:\n",
+    "    vasya.attendcourse(d)\n",
+    "    vasya.dohomework(d)"
    ]
   },
   {
@@ -68,12 +383,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "51689df1-8d95-495c-a581-cd0e013fb129",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Вася идет на дисциплину: Программирование\n",
+      "Вася спит\n",
+      "Вася делает домашку по дисциплине: Программирование\n",
+      "скучно .......\n",
+      "скучно ...\n",
+      "скучно ..\n",
+      "Вася идет на дисциплину: Общий синтаксис\n",
+      "Вася спит\n",
+      "Вася делает домашку по дисциплине: Общий синтаксис\n",
+      "скучно ...\n",
+      "скучно .\n",
+      "Вася идет на дисциплину: Русская морфология\n",
+      "Вася спит\n",
+      "Вася делает домашку по дисциплине: Русская морфология\n",
+      "скучно ....\n",
+      "Вася сдает экзамен по: Программирование\n",
+      "Вася получил 61.0 баллов\n",
+      "Вася сдает экзамен по: Общий синтаксис\n",
+      "Вася получил 80.0 баллов\n",
+      "Вася сдает экзамен по: Русская морфология\n",
+      "Вася получил 36.0 баллов\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "class RecordBook:\n",
+    "    def __init__(self, studentname):\n",
+    "        self.owner = studentname \n",
+    "        self.marks = {}\n",
+    "    def __str__(self):\n",
+    "        return f\"Зачетка студента: {self.owner}\"\n",
+    "    def showmarks(self):\n",
+    "        l = max([len(x) for x in self.marks.keys()]) + 1\n",
+    "        for k, v in self.marks.items():\n",
+    "            print(f\"{k:<{l}}:{v:>3}\")\n",
+    "    def addmark(self, discipline, mark):\n",
+    "        if discipline not in self.marks.keys():\n",
+    "            self.marks[discipline] = [mark]\n",
+    "        else:\n",
+    "            self.marks[discipline].append(mark)\n",
+    "\n",
+    "\n",
+    "class Student:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name \n",
+    "        self.course = 1 \n",
+    "        self.recordbook = RecordBook(name) \n",
+    "    def sleep(self, n):\n",
+    "        print(f'{self.name} спит')\n",
+    "        # for _ in range(n):\n",
+    "        #     print('z' * randint(1, 10))\n",
+    "        time.sleep(n)\n",
+    "    def attendcourse(self, discipline):\n",
+    "        print(f'{self.name} идет на дисциплину: {discipline.name}')\n",
+    "        self.sleep(discipline.duration)\n",
+    "    def dohomework(self, discipline):\n",
+    "        print(f'{self.name} делает домашку по дисциплине: {discipline.name}')\n",
+    "        if discipline.diff >= 2:\n",
+    "            n = 3\n",
+    "        elif 1 <= discipline.diff < 2:\n",
+    "            n = 2\n",
+    "        else:\n",
+    "            n = 1\n",
+    "        for _ in range(n):\n",
+    "            print('скучно', '.' * randint(1, 10))\n",
+    "        self.recordbook.addmark(discipline.name, randint(2, 5))\n",
+    "    def passexam(self, discipline):\n",
+    "        print(f\"{self.name} сдает экзамен по: {discipline.name}\")\n",
+    "        percent = sum(self.recordbook.marks[discipline.name]) / (5 * len(self.recordbook.marks[discipline.name])) * 60\n",
+    "        ex_marks = randint(0, 40)\n",
+    "        print(f\"{self.name} получил {round(percent, 2) + ex_marks} баллов\")\n",
+    "        # self.recordbook.addmark(discipline.name, mark)\n",
+    "    def viewrecordbook(self):\n",
+    "        print(self.recordbook)\n",
+    "        self.recordbook.showmarks()\n",
+    "\n",
+    "class Discipline:\n",
+    "    def __init__(self, name, duration_lec, diffic):\n",
+    "        self.name = name\n",
+    "        self.duration = duration_lec\n",
+    "        self.diff = diffic\n",
+    "\n",
+    "vasya = Student('Вася')\n",
+    "disciplines = [Discipline('Программирование', 1.5, 2), \n",
+    "               Discipline('Общий синтаксис', 2, 1), \n",
+    "               Discipline('Русская морфология', 3, 0.5)]\n",
+    "for d in disciplines:\n",
+    "    vasya.attendcourse(d)\n",
+    "    vasya.dohomework(d)\n",
+    "for d in disciplines:\n",
+    "    vasya.passexam(d)"
    ]
   },
   {
@@ -136,7 +544,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -150,7 +558,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
