--- a/term06/BASE/03-Modules/sem03.ipynb
+++ b/term06/BASE/03-Modules/sem03.ipynb
@@ -12,12 +12,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "619264ca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "452.3893421169302\n",
+      "6\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "from mymath import algebra, geometry\n",
+    "\n",
+    "print(geometry.krug(12))\n",
+    "print(algebra.fact(3))"
    ]
   },
   {
@@ -32,12 +44,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ffd493fb-a3da-4c45-91ce-7e2fd25cceda",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "306\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "from docx import Document\n",
+    "import string\n",
+    "\n",
+    "doc = Document('files/Сухонина_Аннотация_3-й_курс.docx')\n",
+    "tx = ''\n",
+    "for i in doc.paragraphs:\n",
+    "    tx += i.text \n",
+    "for x in string.punctuation:\n",
+    "    if x in tx:\n",
+    "        tx = tx.replace(x, '')\n",
+    "lst = tx.split()\n",
+    "print(len(lst))"
    ]
   },
   {
@@ -52,12 +83,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e8b646e2-1235-42a8-9146-b79afa263aa8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1764\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "from pdfminer.high_level import extract_text\n",
+    "from docx import Document\n",
+    "import string\n",
+    "\n",
+    "user = input('Введите путь к файлу: ')\n",
+    "if user.endswith('.docx'):\n",
+    "    doc = Document(user)\n",
+    "    tx = ''\n",
+    "    for i in doc.paragraphs:\n",
+    "        tx += i.text     \n",
+    "elif user.endswith('.pdf'):\n",
+    "    # tx = extract_text(\"files/Двувидовые_глаголы.pdf\")\n",
+    "    tx = extract_text(user)\n",
+    "for x in string.punctuation:\n",
+    "        if x in tx:\n",
+    "            tx = tx.replace(x, '')\n",
+    "lst = tx.split()\n",
+    "print(len(lst))"
    ]
   },
   {
@@ -72,12 +128,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1f8dad0f-984e-4a86-be26-b80acfff39f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31mwrong path\u001b[0m\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "from pdfminer.high_level import extract_text\n",
+    "from docx import Document\n",
+    "import string\n",
+    "from termcolor import colored, cprint\n",
+    "\n",
+    "ok = True\n",
+    "user = input('Введите путь к файлу: ')\n",
+    "if user.endswith('.docx'):\n",
+    "    doc = Document(user)\n",
+    "    tx = ''\n",
+    "    for i in doc.paragraphs:\n",
+    "        tx += i.text     \n",
+    "elif user.endswith('.pdf'):\n",
+    "    # tx = extract_text(\"files/Двувидовые_глаголы.pdf\")\n",
+    "    tx = extract_text(user)\n",
+    "else:\n",
+    "    col_text = colored('wrong path', 'red')\n",
+    "    cprint(col_text)\n",
+    "    ok = False\n",
+    "if ok:\n",
+    "    for x in string.punctuation:\n",
+    "            if x in tx:\n",
+    "                tx = tx.replace(x, '')\n",
+    "    lst = tx.split()\n",
+    "    print(len(lst))"
    ]
   },
   {
@@ -92,12 +180,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1b741b73-ad3a-4750-a4e9-df27fb8c54d2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<coroutine object Translator.translate at 0x000002A7E63F1180>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "from googletrans import Translator\n",
+    "translator = Translator()\n",
+    "translator.translate('fucking pussy')"
    ]
   },
   {
@@ -163,7 +264,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -177,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
