--- a/term06/BASE/02-OOP/hw02.ipynb
+++ b/term06/BASE/02-OOP/hw02.ipynb
@@ -30,12 +30,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "f648591a-1518-4aaf-9709-459ce15e1d89",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "class Token: #для ридера нужны только части речи (4 позиция), лемма (3 позиция)\n",
+    "    def __init__(self, line):\n",
+    "        info = line.split('\\t')\n",
+    "        self.token_id = info[0]\n",
+    "        self.form = info[1]\n",
+    "        self.lemma = info[2]\n",
+    "        self.upos = info[3]\n",
+    "\n",
+    "class Sentence:\n",
+    "    def __init__(self, lines):\n",
+    "        self.token_list = []\n",
+    "        self.text = ''\n",
+    "        for line in lines:\n",
+    "            if line.startswith('# text'):\n",
+    "                self.text = line[line.index('=') + 2:] #отрезаем предложение\n",
+    "            elif line[0].isdigit() and '-' not in line.split('\\t')[0]:\n",
+    "                token = Token(line)\n",
+    "                self.token_list.append(token)\n",
+    "\n",
+    "class Reader:\n",
+    "    def __init__(self):\n",
+    "        self.sentences = []\n",
+    "    def read(self, file_path):\n",
+    "        with open(file_path, 'r', encoding='utf8') as file:\n",
+    "            sentence_inf = []\n",
+    "            for line in file:\n",
+    "                if line.startswith('# text') or line[0].isdigit():\n",
+    "                    sentence_inf.append(line)\n",
+    "                elif not line.strip():\n",
+    "                    self.sentences.append(Sentence(sentence_inf))\n",
+    "                    sentence_inf = []\n",
+    "            if sentence_inf:\n",
+    "                self.sentences.append(Sentence(sentence_inf))\n",
+    "    \n",
+    "    def upos_statistics(self):\n",
+    "        all_upos = {} #словарь с подсчетом частей речи\n",
+    "        total = 0 #общее кол-во\n",
+    "        for sentence in self.sentences:\n",
+    "            for token in sentence.token_list:\n",
+    "                upos = token.upos\n",
+    "                if upos != '_':\n",
+    "                    all_upos[upos] = all_upos.get(upos, 0) + 1\n",
+    "                    total += 1\n",
+    "        print('Статистика частей речи')\n",
+    "        for upos, amount in all_upos.items():\n",
+    "            percentage = (amount / total) * 100\n",
+    "            print(f'{upos:<{max(len(x) for x in all_upos.keys())}}: {round(percentage, 2)}%')\n",
+    "\n",
+    "    def find_by_lemma(self, lemma):\n",
+    "        res = []\n",
+    "        for sentence in self.sentences:\n",
+    "            for token in sentence.token_list:\n",
+    "                if token.lemma == lemma:\n",
+    "                    data = [token, sentence.text]\n",
+    "                    res.append(data)\n",
+    "        return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "920d4b26",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Выберите, что вы хотите сделать\n",
+      "\t0 - выйти\n",
+      "\t1 - прочитать файл\n",
+      "\t2 - вывести статистику по частям речи\n",
+      "\t3 - искать вхождения по лемме\n",
+      "Выберите, что вы хотите сделать\n",
+      "\t0 - выйти\n",
+      "\t1 - прочитать файл\n",
+      "\t2 - вывести статистику по частям речи\n",
+      "\t3 - искать вхождения по лемме\n",
+      "Статистика частей речи\n",
+      "PRON : 6.94%\n",
+      "AUX  : 7.11%\n",
+      "SCONJ: 0.75%\n",
+      "DET  : 16.04%\n",
+      "NOUN : 16.95%\n",
+      "ADP  : 12.0%\n",
+      "PUNCT: 11.78%\n",
+      "VERB : 7.91%\n",
+      "ADV  : 3.53%\n",
+      "ADJ  : 6.32%\n",
+      "CCONJ: 0.41%\n",
+      "PROPN: 8.73%\n",
+      "NUM  : 0.48%\n",
+      "X    : 1.02%\n",
+      "SYM  : 0.0%\n",
+      "INTJ : 0.01%\n",
+      "Выберите, что вы хотите сделать\n",
+      "\t0 - выйти\n",
+      "\t1 - прочитать файл\n",
+      "\t2 - вывести статистику по частям речи\n",
+      "\t3 - искать вхождения по лемме\n",
+      "Количество вхождений: 28\n",
+      "Найдено: mort в предложении Quand le cardinal Juan Jesus Posadas Ocampo est-il mort ?\n",
+      "\n",
+      "Найдено: mort в предложении Comment Vitas Gerulaitis est-il mort ?\n",
+      "\n",
+      "Найдено: mort в предложении Quand Shapour Bakhtiar est-il mort ?\n",
+      "\n",
+      "Найдено: mortes в предложении Combien de personnes sont mortes dans l'écrasement d'un avion survenu dans les Everglades en 1972 ?\n",
+      "\n",
+      "Найдено: morte в предложении En quelle année est morte Lucelly Garcia, une ancienne ambassadrice de la Colombie au Honduras ?\n",
+      "\n",
+      "Найдено: mort в предложении Quand Nixon est-il mort ?\n",
+      "\n",
+      "Найдено: mort в предложении À quel moment de la journée l'empereur Hirohito est-il mort ?\n",
+      "\n",
+      "Найдено: morts в предложении Combien de gens sont morts lorsque l'Estonia a coulé en 1994 ?\n",
+      "\n",
+      "Найдено: mort в предложении Quel célèbre chef communiste est mort à Mexico ?\n",
+      "\n",
+      "Найдено: mort в предложении Où est mort Dylan Thomas ?\n",
+      "\n",
+      "Найдено: mort в предложении Comment est mort Socrate ?\n",
+      "\n",
+      "Найдено: morts в предложении Environ combien de soldats sont morts dans la Deuxième Guerre mondiale ?\n",
+      "\n",
+      "Найдено: meurent в предложении Aux États-Unis, combien de personnes par année meurent d'un empoisonnement dû à une morsure de serpent ?\n",
+      "\n",
+      "Найдено: mort в предложении Comment Bob Marley est-il mort ?\n",
+      "\n",
+      "Найдено: mort в предложении En quelle année est mort Hitler ?\n",
+      "\n",
+      "Найдено: mort в предложении Quel âge avait Elvis Presley lorsqu'il est mort ?\n",
+      "\n",
+      "Найдено: mort в предложении Quand Elvis Presley est-il mort ?\n",
+      "\n",
+      "Найдено: mort в предложении Où est mort Howard Hughes ?\n",
+      "\n",
+      "Найдено: morte в предложении Comment Janice Joplin est-elle morte ?\n",
+      "\n",
+      "Найдено: mort в предложении Quand Bob Marley est-il mort ?\n",
+      "\n",
+      "Найдено: mort в предложении Comment est mort le Mahatma Gandhi ?\n",
+      "\n",
+      "Найдено: morte в предложении Comment la mère de Molly Shannon est-elle morte ?\n",
+      "\n",
+      "Найдено: mort в предложении Quel poète célèbre est mort pendant la Guerre civile espagnole ?\n",
+      "\n",
+      "Найдено: mort в предложении Comment est mort Micky Mantle ?\n",
+      "\n",
+      "Найдено: mort в предложении Quand Walt Disney est-il mort ?\n",
+      "\n",
+      "Найдено: mort в предложении Comment Adolf Hitler est-il mort ?\n",
+      "\n",
+      "Найдено: mort в предложении Quel était la nom de la pièce de théâtre à la représentation de laquelle A. Lincoln est mort ?\n",
+      "\n",
+      "Найдено: morte в предложении Comment est morte Eva Peron ?\n",
+      "\n",
+      "Выберите, что вы хотите сделать\n",
+      "\t0 - выйти\n",
+      "\t1 - прочитать файл\n",
+      "\t2 - вывести статистику по частям речи\n",
+      "\t3 - искать вхождения по лемме\n",
+      "Количество вхождений: 7\n",
+      "Найдено: Lincoln в предложении Où a été assassiné Lincoln ?\n",
+      "\n",
+      "Найдено: Lincoln в предложении Qui était Abraham Lincoln ?\n",
+      "\n",
+      "Найдено: Lincoln в предложении Quand Abraham Lincoln est-il né ?\n",
+      "\n",
+      "Найдено: Lincoln в предложении Où est né Abraham Lincoln ?\n",
+      "\n",
+      "Найдено: Lincoln в предложении Quand Marian Anderson a-t-elle chanté au mémorial Lincoln ?\n",
+      "\n",
+      "Найдено: Lincoln в предложении Où a été enterré le Président Lincoln ?\n",
+      "\n",
+      "Найдено: Lincoln в предложении Quel était la nom de la pièce de théâtre à la représentation de laquelle A. Lincoln est mort ?\n",
+      "\n",
+      "Выберите, что вы хотите сделать\n",
+      "\t0 - выйти\n",
+      "\t1 - прочитать файл\n",
+      "\t2 - вывести статистику по частям речи\n",
+      "\t3 - искать вхождения по лемме\n"
+     ]
+    }
+   ],
+   "source": [
+    "reader = Reader()\n",
+    "\n",
+    "while True:\n",
+    "    print('Выберите, что вы хотите сделать\\n\\t0 - выйти\\n\\t1 - прочитать файл\\n\\t2 - вывести статистику по частям речи\\n\\t3 - искать вхождения по лемме')\n",
+    "    user = int(input())\n",
+    "    if user == 0: #exit\n",
+    "        break\n",
+    "    elif user == 1: #reading\n",
+    "        # user_path = input('Введите путь в файлу')\n",
+    "        user_path = 'fr_fqb-ud-test.conllu'\n",
+    "        reader.read(user_path)\n",
+    "    elif user == 2: #statistics\n",
+    "        reader.upos_statistics()\n",
+    "    elif user == 3: #search by lemma\n",
+    "        user_lemma = input('Введите лемму')\n",
+    "        result = reader.find_by_lemma(user_lemma)\n",
+    "        print(f'Количество вхождений: {len(result)}')\n",
+    "        for token in result:\n",
+    "            print(f'Найдено: {token[0].form} в предложении {token[1]}')\n",
+    "    else:\n",
+    "        print('Такой команды нет.')\n",
+    "    "
    ]
   },
   {
@@ -50,12 +257,193 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "1b452e22-519b-4426-83e8-0c23cd1d775d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "class Book: #author, title, genre, pages\n",
+    "    def __init__(self, author, title, genre, pages):\n",
+    "        self.author = author\n",
+    "        self.title = title\n",
+    "        self.genre = genre\n",
+    "        self.pages = pages\n",
+    "\n",
+    "    def __eq__(self, other):\n",
+    "        return self.author == other.author and self.title == other.title\n",
+    "\n",
+    "class Bibliotheque: \n",
+    "    #all_books\n",
+    "    # demand: all_books by authorX; all_books be genreX, check if bookX of authorX exist\n",
+    "    def __init__(self):\n",
+    "        self.books = []\n",
+    "\n",
+    "    def adding_books(self, book):\n",
+    "        self.books.append(book)\n",
+    "        print(f'Книга \"{book.title}\" добавлена в библиотеку')\n",
+    "\n",
+    "    def finding_by_author(self, author):\n",
+    "        books_by_author = []\n",
+    "        for book in self.books:\n",
+    "            if book.author == author:\n",
+    "                books_by_author.append(book)\n",
+    "        return books_by_author\n",
+    "    \n",
+    "    def finding_by_genre(self, genre):\n",
+    "        books_by_genre = []\n",
+    "        for book in self.books:\n",
+    "            if book.genre == genre:\n",
+    "                books_by_genre.append(book)\n",
+    "        return books_by_genre\n",
+    "    \n",
+    "    def book_existence(self, author, title):\n",
+    "        request = Book(author, title, 'XXX', 1)\n",
+    "        return request in self.books\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c6753a8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#add_bibl\n",
+    "bibl = Bibliotheque()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "265c1920",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Книга \"A grammar of Mian\" добавлена в библиотеку\n",
+      "Книга \"A grammar of Sierra Popoluca\" добавлена в библиотеку\n",
+      "Книга \"Shadow and Bone\" добавлена в библиотеку\n",
+      "Книга \"Three comrades\" добавлена в библиотеку\n",
+      "Книга \"Arch of Triumph\" добавлена в библиотеку\n"
+     ]
+    }
+   ],
+   "source": [
+    "#adding_books\n",
+    "book1 = Book('Fedden', 'A grammar of Mian', 'Science', 604)\n",
+    "book2 = Book('Boudreault', 'A grammar of Sierra Popoluca', 'Science', 1049)\n",
+    "book3 = Book('Bardugo', 'Shadow and Bone', 'Fantasy', 358)\n",
+    "book4 = Book('Remarque', 'Three comrades', 'Novel', 480)\n",
+    "book5 = Book('Remarque', 'Arch of Triumph', 'War novel', 455)\n",
+    "bibl.adding_books(book1)\n",
+    "bibl.adding_books(book2)\n",
+    "bibl.adding_books(book3)\n",
+    "bibl.adding_books(book4)\n",
+    "bibl.adding_books(book5)\n",
+    "#я хотела добавить книги через цикл фор, но чет не получилось. в итоге выглядит некрасиво(\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "fc4ccc10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Добро пожаловать в нашу библиотеку! Выберите, что вы хотите сделать\n",
+      "\t0 - выйти\n",
+      "\t1 - добавить новую книгу\n",
+      "\t2 - найти книги по автору\n",
+      "\t3 - найти книги по жанру\n",
+      "\t4 - проверить наличие книги в библиотеке\n",
+      "\u001b[31mТакой команды нет!\u001b[0m\n",
+      "Добро пожаловать в нашу библиотеку! Выберите, что вы хотите сделать\n",
+      "\t0 - выйти\n",
+      "\t1 - добавить новую книгу\n",
+      "\t2 - найти книги по автору\n",
+      "\t3 - найти книги по жанру\n",
+      "\t4 - проверить наличие книги в библиотеке\n",
+      "Книга \"Kings of Scars\" добавлена в библиотеку\n",
+      "Добро пожаловать в нашу библиотеку! Выберите, что вы хотите сделать\n",
+      "\t0 - выйти\n",
+      "\t1 - добавить новую книгу\n",
+      "\t2 - найти книги по автору\n",
+      "\t3 - найти книги по жанру\n",
+      "\t4 - проверить наличие книги в библиотеке\n",
+      "Книги автора Remarque: \n",
+      "\tThree comrades\n",
+      "\tArch of Triumph\n",
+      "Добро пожаловать в нашу библиотеку! Выберите, что вы хотите сделать\n",
+      "\t0 - выйти\n",
+      "\t1 - добавить новую книгу\n",
+      "\t2 - найти книги по автору\n",
+      "\t3 - найти книги по жанру\n",
+      "\t4 - проверить наличие книги в библиотеке\n",
+      "Книги жанра Science: \n",
+      "\tA grammar of Mian\n",
+      "\tA grammar of Sierra Popoluca\n",
+      "Добро пожаловать в нашу библиотеку! Выберите, что вы хотите сделать\n",
+      "\t0 - выйти\n",
+      "\t1 - добавить новую книгу\n",
+      "\t2 - найти книги по автору\n",
+      "\t3 - найти книги по жанру\n",
+      "\t4 - проверить наличие книги в библиотеке\n",
+      "Да, A grammar of Mian автора Fedden есть в библиотеке\n",
+      "Добро пожаловать в нашу библиотеку! Выберите, что вы хотите сделать\n",
+      "\t0 - выйти\n",
+      "\t1 - добавить новую книгу\n",
+      "\t2 - найти книги по автору\n",
+      "\t3 - найти книги по жанру\n",
+      "\t4 - проверить наличие книги в библиотеке\n",
+      "Да, Kings of Scars автора Bardugo есть в библиотеке\n",
+      "Добро пожаловать в нашу библиотеку! Выберите, что вы хотите сделать\n",
+      "\t0 - выйти\n",
+      "\t1 - добавить новую книгу\n",
+      "\t2 - найти книги по автору\n",
+      "\t3 - найти книги по жанру\n",
+      "\t4 - проверить наличие книги в библиотеке\n"
+     ]
+    }
+   ],
+   "source": [
+    "from termcolor import colored, cprint\n",
+    "\n",
+    "while True:\n",
+    "    print('Добро пожаловать в нашу библиотеку! Выберите, что вы хотите сделать\\n\\t0 - выйти\\n\\t1 - добавить новую книгу\\n\\t2 - найти книги по автору\\n\\t3 - найти книги по жанру\\n\\t4 - проверить наличие книги в библиотеке')\n",
+    "    user = int(input())\n",
+    "    if user == 0: #exit\n",
+    "        break\n",
+    "    elif user == 1: #adding books\n",
+    "        name, author, genre, pages = input('Введите название книги: '), input('Введите фамилию автора: '), input('Введите жанр книги: '), input('Введите количество страниц: ')\n",
+    "        new_book = Book(author, name, genre, pages)\n",
+    "        bibl.adding_books(new_book)\n",
+    "    elif user == 2: #finding by author\n",
+    "        author = input('Введите фамилию автора: ')\n",
+    "        author_s_books = bibl.finding_by_author(author)\n",
+    "        print(f'Книги автора {author}: ')\n",
+    "        for book in author_s_books:\n",
+    "            print(f'\\t{book.title}')\n",
+    "    elif user == 3: #finding by genre\n",
+    "        genre = input('Введите жанр: ')\n",
+    "        books_by_genre = bibl.finding_by_genre(genre)\n",
+    "        print(f'Книги жанра {genre}: ')\n",
+    "        for book in books_by_genre:\n",
+    "            print(f'\\t{book.title}')\n",
+    "    elif user == 4: #book existence\n",
+    "        name, author = input('Введите название книги и фамилию автора через запятую').split(', ')\n",
+    "        if bibl.book_existence(author, name):\n",
+    "            print(f'Да, {name} автора {author} есть в библиотеке')\n",
+    "        else:\n",
+    "            print(f'Запрашиваемой книги {name} автора {author} нет в библиотеке')\n",
+    "    else:\n",
+    "        output = colored('Такой команды нет!', 'red')\n",
+    "        print(output)"
    ]
   }
  ],
@@ -75,7 +463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
