--- a/term06/BASE/02-OOP/sem02.ipynb
+++ b/term06/BASE/02-OOP/sem02.ipynb
@@ -513,12 +513,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "b52ea8f4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "class Token:\n",
+    "    def __init__(self, line):\n",
+    "        self.id, self.form, self.lemma, self.upos, self.xpos, self.feats, self.head, self.deprel, self.deps, self.misc = line.split('\\t')\n",
+    "    def __str__(self):\n",
+    "        return f'Токен {self.id}: {self.form}\\nЛемма: {self.lemma}\\nЧасть речи: {self.upos}\\nГрамматические характеристики: {self.feats}\\nСинтаксическая связь: {self.deprel}'\n",
+    "    def __repr__(self):\n",
+    "        return f'Token(id={self.id}, form={self.form}, lemma={self.lemma}, upos={self.upos}, xpos={self.xpos}, feats={self.feats}, head={self.head}, deprel={self.deprel}, deps={self.deps}, misc={self.misc})'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "c84794da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Токен 14: тысяч\n",
+      "Лемма: тысяча\n",
+      "Часть речи: NOUN\n",
+      "Грамматические характеристики: Animacy=Inan|Case=Gen|Gender=Fem|Number=Plur\n",
+      "Синтаксическая связь: nsubj\n"
+     ]
+    }
+   ],
+   "source": [
+    "line ='14\tтысяч\tтысяча\tNOUN\t_\tAnimacy=Inan|Case=Gen|Gender=Fem|Number=Plur\t11\tnsubj\t11:nsubj\tSpaceAfter=No'\n",
+    "token = Token(line)\n",
+    "print(token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "4c26874a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Token(id=14, form=тысяч, lemma=тысяча, upos=NOUN, xpos=_, feats=Animacy=Inan|Case=Gen|Gender=Fem|Number=Plur, head=11, deprel=nsubj, deps=11:nsubj, misc=SpaceAfter=No)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#я сделала все по аналогии, но если честно так и не догнала, как проявляет себя __repr__\n",
+    "#получается __repr__ используется в разработческой среде, для того чтобы показать, как устроен конкретно написанный класс? (в смысле его структура)\n",
+    "print(repr(token))"
    ]
   },
   {
@@ -533,12 +583,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "8d4652bf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "class Car:\n",
+    "    def __init__(self, brand, seats, fuel_tank, fuel, cleanliness):\n",
+    "        self.brand = brand #марка\n",
+    "        self.seats = seats #сиденья\n",
+    "        self.fuel_tank = fuel_tank #макс объем\n",
+    "        self.fuel = fuel #текущее колво бензина\n",
+    "        self.cleanliness = cleanliness #уровень чистоты\n",
+    "    def __str__(self):\n",
+    "        return f\"Машина марки {self.brand}, количество сидений: {self.seats}, макс объем бензобака: {self.fuel_tank}, текущее количество бензина: {self.fuel}, уровень чистоты: {self.cleanliness}\"\n",
+    "    def new_passengers(self, passengers):\n",
+    "        if self.seats < passengers:\n",
+    "            print('Невозможно посадить столько чесловек.')\n",
+    "        else:\n",
+    "            print(f'Посадили {passengers} человек.')\n",
+    "    def refueling(self, litres):\n",
+    "        self.fuel += litres\n",
+    "        if self.fuel > self.fuel_tank:\n",
+    "            self.fuel = self.fuel_tank\n",
+    "        print(f'Теперь текущее количество бензина: {self.fuel}л')\n",
+    "    def washing(self):\n",
+    "        self.cleanliness = 100\n",
+    "        print(f'Машина помыта! Уровень чистоты теперь: {self.cleanliness}%')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "4aef1274",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f_car = Car('Kia', 5, 70, 35, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "dfc51f5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Посадили 3 человек.\n",
+      "Теперь текущее количество бензина: 50л\n",
+      "Машина помыта! Уровень чистоты теперь: 100%\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    user = int(input('Введите команду: \\n\\t0 - выход\\n\\t1 - посадить пассажиров\\n\\t2 - заправиться\\n\\t3 - помыть машину'))\n",
+    "    if user == 0:\n",
+    "        break\n",
+    "    elif user == 1:\n",
+    "        people = int(input('Сколько человек хотите посадить?'))\n",
+    "        f_car.new_passengers(people)\n",
+    "    elif user == 2:\n",
+    "        fuel = int(input('На сколько литров хотите заправиться?'))\n",
+    "        f_car.refueling(fuel)\n",
+    "    elif user == 3:\n",
+    "        f_car.washing()"
    ]
   }
  ],
